--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -12,33 +12,50 @@
 
     <div class="flex">
         <div>
-            <div class="rectangle"></div>
-            <div class="links">
-                <a href="#"> Услуги и цены
-                </a>
-                <a href="#"> Дипломы и сертификаты
-                </a>
-                <a href="#"> Отзывы
-                </a>
+            <div class="rectangle">
+
+                <p class="text-center margin-text">Эстетик Студия</p>
+                <h1 class="text-center"> Лесиной Нателы</h1>
+                <p class="text-center">Косметология и эпиляция</p>
+                <div class="button-center">
+                    <button class="button-style" >Записаться
+                    </button>
+                </div>
             </div>
+            <div class="links">
+                <div>
+                    <a class="link" href="#"> Услуги и цены
+                    </a>
+                    <a class="link" href="#"> Дипломы и сертификаты
+                    </a>
+                    <a href="#"> Отзывы
+                    </a>
+                </div>
+            </div>
+
         </div>
 
 
         <div class="margin-right">
-            <p class="contacts">kzkz</p>
-            <img class="photo-lady" src="Lady.png">
+            <div class="float-right">
+                <p class="contacts float-right">+7(953)467-65-76</p>
+                <div class="align-right">
+                    <span><img src="Location.png"></span>
+                    <span>г.Калуга</span>
+                </div>
+                <div class="flex-end">
+                    <a href=""><div class="vk"></div></a>
+                    <a href=""><div class="whatsapp"></div></a>
+                    <a href=""><div class="insta"></div></a>
+                </div>
+            </div>
+            <img class="photo-lady float-right" src="Lady.png">
         </div>
 
 </div>
 
 
 
-
-
-<p>Эстетик Студия</p>
-    <h1>Лесиной Нателы</h1>
-    <p>Косметология и эпиляция</p>
-    <button>Записаться</button>
 
 
 
