--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -2,46 +2,45 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="estetic-styles.css" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Gabriela&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Estetic</title>
 </head>
 
 
-<body>
-<div>
-
+<body class="body-background">
+<div class="first-path">
     <div class="flex">
         <div>
             <div class="rectangle">
 
-                <p class="text-center margin-text">Эстетик Студия</p>
-                <h1 class="text-center"> Лесиной Нателы</h1>
-                <p class="text-center">Косметология и эпиляция</p>
+                <p class="text-center margin-text text-estetic">Эстетик Студия</p>
+                <h1 class="text-center text-Nata"> Лесиной Нателы</h1>
+                <p class="text-center text-cosmetology">Косметология и эпиляция</p>
                 <div class="button-center">
-                    <button class="button-style" >Записаться
+                    <button class="button-style sing-up">
+                        <p>Записаться
+                        </p>
                     </button>
                 </div>
             </div>
             <div class="links">
                 <div>
-                    <a class="link" href="#"> Услуги и цены
+                    <a class="link text-decoration-none" href="#"> Услуги и цены
                     </a>
-                    <a class="link" href="#"> Дипломы и сертификаты
+                    <a class="link text-decoration-none" href="#"> Дипломы и сертификаты
                     </a>
-                    <a href="#"> Отзывы
+                    <a class="text-decoration-none" href="#"> Отзывы
                     </a>
                 </div>
             </div>
-
         </div>
-
-
         <div class="margin-right">
             <div class="float-right">
                 <p class="contacts float-right">+7(953)467-65-76</p>
                 <div class="align-right">
-                    <span><img src="Location.png"></span>
-                    <span>г.Калуга</span>
+                    <span><img class="icon-location" src="Location.png"></span>
+                    <span class="location">г.Калуга</span>
                 </div>
                 <div class="flex-end">
                     <a href=""><div class="vk"></div></a>
@@ -51,12 +50,127 @@
             </div>
             <img class="photo-lady float-right" src="Lady.png">
         </div>
-
+    </div>
 </div>
 
 
 
+<div class="path">
+    <div class="flex-container">
+        <div class="white-rectangle">
+            <div>
+                <img class="margin-advantages" src="Advantage-1.png">
+                <p class="margin-p">Серцифицированный специалист</p>
+            </div>
+        </div>
+        <div class="invisible-rectangle">
+            <div>
+                <img class="margin-advantages" src="Advantage-2.png">
+                <p class="margin-p">Профессиональная косметика</p>
+            </div>
+        </div>
+        <div class="white-rectangle">
+            <div>
+                <img class="margin-advantages" src="Advantage-3.png">
+                <p class="margin-p">Многолетний опыт работы с клиентами</p>
+            </div>
+        </div>
+        <div class="invisible-rectangle">
+            <div>
+                <img class="margin-advantages" src="Advantage-4.png">
+                <p class="margin-p">Удобное расположение в центре города</p>
+            </div>
+        </div>
+        <div class="white-rectangle">
+            <div>
+                <img class="margin-advantages" src="Advantage-5.png">
+                <p class="margin-p">Всегда уютная атмофера</p>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div class="container">
+    <div>
+        <img class="Photo-1" src="Photo-1.png">
+    </div>
+    <div class="Orange">
+        <div class="paddind-div">
+        <h2>
+            Меня зовут Натела и я рада приветсвовать Вас в своей эстетик студии!
+        </h2>
+        <p class="text-inherit">
+            Моя студия - это место, где прекрасно понимают,
+        как ценна естественная красота, и умеют ее создавать и сохранять.
+        Я стремлюсь к тому, чтобы в условиях быстрого ритма жизни каждый клиент,
+        который пришел ко мне, ощущал тепло и спокойствие.
+        </p>
+        <p class="text-inherit">
+            В своей работе я всегда использую только те средства,
+        которые зарекомендовали себя как лучшие в своем сегменте.
+        </p>
+            <p class="text-inherit">
+                Я всей душой люблю свою работу и своих клиентов,
+        и это вдохновляет меня на постоянное обучение и совершенствование своих профессиональных навыков!
+        Будьте уверены, в моей студии вы получите только высококачественные и
+        эффективные процедуры по доступным ценам.
+        </p>
+        </div>
+    </div>
+</div>
+
+<div>
+<div class="margin-header">
+    <div class="header">
+        Услуги
+    </div>
+</div>
+    <div class="services">
+        <p class="margin-p margin-top-p">
+            Очищение кожи лица
+        </p>
+        <p class="margin-p">
+            Уходовые программы
+        </p>
+        <p class="margin-p">
+            Пиллинги Эпиляция (воск/сахар)
+        </p>
+        <p class="margin-p">
+            Оформление и окрашивание бровей
+        </p>
+    </div>
+
+</div>
+
+<div class="buttons">
+    <div>
+        <button class="button-style margin-buttons">
+            <p>Записаться
+            </p>
+        </button>
+    </div>
+    <div>
+        <button class="button-style margin-buttons">
+            <p>Перейти в прайс лист
+            </p>
+        </button>
+    </div>
+</div>
+
+
+<div class="reviews">
+    <h2 class="padding-h2">
+        Отзывы клиентов
+    </h2>
+</div>
+<div class="button-center margin-reviews">
+<button class="button-style"> Смотреть все отзывы</button>
+</div>
+<div class="button-center">
+    <a href=""><div class="vk vk-footer"></div></a>
+    <a href=""><div class="whatsapp whatsapp-footer"></div></a>
+    <a href=""><div class="insta insta-footer"></div></a>
+</div>
 
 
 </body>
