--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -35,20 +35,23 @@
                 </div>
             </div>
         </div>
-        <div class="margin-right">
-            <div class="float-right">
-                <p class="contacts float-right">+7(953)467-65-76</p>
-                <div class="align-right">
+        <div class="contacts-lady">
+            <div class="all-contacts">
+                <p class="contacts">+7(953)467-65-76</p>
+                <div>
                     <span><img class="icon-location" src="Location.png"></span>
                     <span class="location">г.Калуга</span>
                 </div>
-                <div class="flex-end">
+                <div class="socials">
                     <a href=""><div class="vk"></div></a>
                     <a href=""><div class="whatsapp"></div></a>
                     <a href=""><div class="insta"></div></a>
                 </div>
             </div>
-            <img class="photo-lady float-right" src="Lady.png">
+            <div class="lady-position">
+                <img class="photo-lady" src="Lady.png">
+                <img class="photo-lady-tablet" src="Tablet-lady.png">
+            </div>
         </div>
     </div>
 </div>
@@ -63,21 +66,21 @@
                 <p class="margin-p">Серцифицированный специалист</p>
             </div>
         </div>
-        <div class="invisible-rectangle">
+        <div class="invisible-rectangle w-320">
             <div>
-                <img class="margin-advantages" src="Advantage-2.png">
+                <img class="margin-advantages padding-advantages" src="Advantage-2.png">
                 <p class="margin-p">Профессиональная косметика</p>
             </div>
         </div>
-        <div class="white-rectangle">
+        <div class="white-rectangle i-964">
             <div>
                 <img class="margin-advantages" src="Advantage-3.png">
                 <p class="margin-p">Многолетний опыт работы с клиентами</p>
             </div>
         </div>
-        <div class="invisible-rectangle">
+        <div class="invisible-rectangle w-964 w-734 w-320">
             <div>
-                <img class="margin-advantages" src="Advantage-4.png">
+                <img class="margin-advantages padding-advantages " src="Advantage-4.png">
                 <p class="margin-p">Удобное расположение в центре города</p>
             </div>
         </div>
@@ -96,20 +99,20 @@
     </div>
     <div class="Orange">
         <div class="paddind-div">
-        <h2>
+        <h2 class="h2-size">
             Меня зовут Натела и я рада приветсвовать Вас в своей эстетик студии!
         </h2>
-        <p class="text-inherit">
+        <p class="text-main">
             Моя студия - это место, где прекрасно понимают,
         как ценна естественная красота, и умеют ее создавать и сохранять.
         Я стремлюсь к тому, чтобы в условиях быстрого ритма жизни каждый клиент,
         который пришел ко мне, ощущал тепло и спокойствие.
         </p>
-        <p class="text-inherit">
+        <p class="text-main">
             В своей работе я всегда использую только те средства,
         которые зарекомендовали себя как лучшие в своем сегменте.
         </p>
-            <p class="text-inherit">
+            <p class="text-main">
                 Я всей душой люблю свою работу и своих клиентов,
         и это вдохновляет меня на постоянное обучение и совершенствование своих профессиональных навыков!
         Будьте уверены, в моей студии вы получите только высококачественные и
@@ -141,22 +144,18 @@
     </div>
 
 </div>
-
-<div class="buttons">
-    <div>
-        <button class="button-style margin-buttons">
+    <div class="buttons-center margin-sing-up margin-sing-up-small">
+        <button class="button-style">
             <p>Записаться
             </p>
         </button>
     </div>
-    <div>
-        <button class="button-style margin-buttons">
+    <div class="buttons-center go-to-price">
+        <button class="button-style">
             <p>Перейти в прайс лист
             </p>
         </button>
     </div>
-</div>
-
 
 <div class="reviews">
     <h2 class="padding-h2">
@@ -171,6 +170,36 @@
     <a href=""><div class="whatsapp whatsapp-footer"></div></a>
     <a href=""><div class="insta insta-footer"></div></a>
 </div>
+
+
+<div class="white-header">
+    <div class="mobile-menu">
+    <button class="burger">
+    </button>
+    <p class="mobile-number">+7(953)467-65-76
+    </p>
+    <div class="socials-mobile">
+        <a href=""><div class="vk"></div></a>
+        <a href=""><div class="whatsapp"></div></a>
+        <a href=""><div class="insta"></div></a>
+    </div>
+    </div>
+</div>
+<div class="mobile-lady">
+    <div class="text-container">
+        <p class="text-center text-estetic text-estetic-mobile">Эстетик Студия</p>
+        <h1 class="text-center text-Nata text-Nata-mobile"> Лесиной Нателы</h1>
+        <p class="text-center text-cosmetology text-cosmetology-mobile">Косметология и эпиляция</p>
+        <div class="button-center">
+            <button class="button-style button-style-mobile sing-up">
+                <p class="p-mobile">Записаться
+                </p>
+            </button>
+
+    </div>
+
+</div>
+
 
 
 </body>
