--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -9,7 +9,7 @@
 
 
 <body class="body-background">
-<div class="first-path">
+<div class="first-path hide-tablet-mobile">
     <div class="flex">
         <div>
             <div class="rectangle">
@@ -57,6 +57,53 @@
 </div>
 
 
+<div class="path hide-desktop show-tablet-mobile">
+    <div class="white-header">
+        <div class="mobile-menu">
+            <button class="burger">
+            </button>
+            <p class="mobile-number">+7(953)467-65-76
+            </p>
+            <div class="socials-mobile">
+                <a href="">
+                    <div class="vk"></div>
+                </a>
+                <a href="">
+                    <div class="whatsapp"></div>
+                </a>
+                <a href="">
+                    <div class="insta"></div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="container-tablet container-mobile">
+        <div class="tablet-vertical-lady mobile-lady">
+            <div class="text-container">
+                <div>
+                    <p class="text-center text-estetic text-estetic-tablet text-estetic-mobile">Эстетик Студия
+                    </p>
+                </div>
+                <div>
+                    <h1 class="text-center text-Nata text-Nata-tablet text-Nata-mobile"> Лесиной Нателы
+                    </h1>
+                </div>
+                <div>
+                    <p class="text-center text-cosmetology text-cosmetology-tablet text-cosmetology-mobile">Косметология
+                        и
+                        эпиляция
+                    </p>
+                </div>
+                <div class="button-center">
+                    <button class="button-style button-style-tablet sing-up">
+                        <p class="p-tablet">Записаться
+                        </p>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="path">
     <div class="flex-container">
@@ -129,16 +176,16 @@
     </div>
 </div>
     <div class="services">
-        <p class="margin-p margin-top-p">
+        <p class="margin-p-services margin-top-p">
             Очищение кожи лица
         </p>
-        <p class="margin-p">
+        <p class="margin-p-services">
             Уходовые программы
         </p>
-        <p class="margin-p">
+        <p class="margin-p-services">
             Пиллинги Эпиляция (воск/сахар)
         </p>
-        <p class="margin-p">
+        <p class="margin-p-services">
             Оформление и окрашивание бровей
         </p>
     </div>
@@ -170,36 +217,6 @@
     <a href=""><div class="whatsapp whatsapp-footer"></div></a>
     <a href=""><div class="insta insta-footer"></div></a>
 </div>
-
-
-<div class="white-header">
-    <div class="mobile-menu">
-    <button class="burger">
-    </button>
-    <p class="mobile-number">+7(953)467-65-76
-    </p>
-    <div class="socials-mobile">
-        <a href=""><div class="vk"></div></a>
-        <a href=""><div class="whatsapp"></div></a>
-        <a href=""><div class="insta"></div></a>
-    </div>
-    </div>
-</div>
-<div class="mobile-lady">
-    <div class="text-container">
-        <p class="text-center text-estetic text-estetic-mobile">Эстетик Студия</p>
-        <h1 class="text-center text-Nata text-Nata-mobile"> Лесиной Нателы</h1>
-        <p class="text-center text-cosmetology text-cosmetology-mobile">Косметология и эпиляция</p>
-        <div class="button-center">
-            <button class="button-style button-style-mobile sing-up">
-                <p class="p-mobile">Записаться
-                </p>
-            </button>
-
-    </div>
-
-</div>
-
 
 
 </body>
