изменения дизайна, новый фон, доп.отзывы,сертификаты. Второстепенные страницы.

--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -8,7 +8,7 @@
 </head>
 
 
-<body class="body-background">
+<body>
 <div class="first-path hide-tablet-mobile">
     <div class="flex">
         <div>
@@ -26,11 +26,11 @@
             </div>
             <div class="links">
                 <div>
-                    <a class="link text-decoration-none" href="#"> Услуги и цены
+                    <a class="link text-decoration-none" href="Services.html"> Услуги и цены
                     </a>
-                    <a class="link text-decoration-none" href="#"> Дипломы и сертификаты
+                    <a class="link text-decoration-none" href="Сertificates.html"> Дипломы и сертификаты
                     </a>
-                    <a class="text-decoration-none" href="#"> Отзывы
+                    <a class="text-decoration-none" href="Reviews.html"> Отзывы
                     </a>
                 </div>
             </div>
@@ -89,12 +89,12 @@
                     </h1>
                 </div>
                 <div>
-                    <p class="text-center text-cosmetology text-cosmetology-tablet text-cosmetology-mobile">Косметология
-                        и
-                        эпиляция
+                    <p class="text-center text-cosmetology
+                    text-cosmetology-tablet text-cosmetology-mobile">
+                        Косметология и эпиляция
                     </p>
                 </div>
-                <div class="button-center">
+                <div class="button-center margin-sing-up-small">
                     <button class="button-style button-style-tablet sing-up">
                         <p class="p-tablet">Записаться
                         </p>
@@ -106,20 +106,20 @@
 </div>
 
 <div class="path">
-    <div class="flex-container">
+    <div class="flex-container part-2">
         <div class="white-rectangle">
             <div>
                 <img class="margin-advantages" src="Advantage-1.png">
                 <p class="margin-p">Серцифицированный специалист</p>
             </div>
         </div>
-        <div class="invisible-rectangle w-320">
+        <div class="invisible-rectangle w-320 i-734 i-964">
             <div>
                 <img class="margin-advantages padding-advantages" src="Advantage-2.png">
                 <p class="margin-p">Профессиональная косметика</p>
             </div>
         </div>
-        <div class="white-rectangle i-964">
+        <div class="white-rectangle w-980 i-max i-750">
             <div>
                 <img class="margin-advantages" src="Advantage-3.png">
                 <p class="margin-p">Многолетний опыт работы с клиентами</p>
@@ -127,7 +127,7 @@
         </div>
         <div class="invisible-rectangle w-964 w-734 w-320">
             <div>
-                <img class="margin-advantages padding-advantages " src="Advantage-4.png">
+                <img class="margin-advantages padding-advantages" src="Advantage-4.png">
                 <p class="margin-p">Удобное расположение в центре города</p>
             </div>
         </div>
@@ -191,23 +191,31 @@
     </div>
 
 </div>
-    <div class="buttons-center margin-sing-up margin-sing-up-small">
+    <div class="buttons-center margin-sing-up">
         <button class="button-style">
             <p>Записаться
             </p>
         </button>
     </div>
     <div class="buttons-center go-to-price">
-        <button class="button-style">
+        <a href="services.html">
+            <button class="button-style">
             <p>Перейти в прайс лист
             </p>
         </button>
+        </a>
     </div>
 
 <div class="reviews">
     <h2 class="padding-h2">
         Отзывы клиентов
     </h2>
+    <div class="reviews-text">
+        <div><img class="reviews-sms" src="o1.png"></div>
+        <div><img class="reviews-sms" src="o2.png"></div>
+        <div><img class="reviews-sms" src="o3.png"></div>
+        <div><img class="reviews-sms" src="o4.png"></div>
+    </div>
 </div>
 <div class="button-center margin-reviews">
 <button class="button-style"> Смотреть все отзывы</button>
@@ -218,6 +226,37 @@
     <a href=""><div class="insta insta-footer"></div></a>
 </div>
 
+<div class="pop-up">
+    <div class="cancel">
+        <img src="Cancel.png">
+    </div>
+        <form>
+                <label>
+                    <input class="input-form" type="text" name="firstname" placeholder="Ваше имя">
+                </label> <br> <br>
+                <label>
+                    <input class="input-form" type="text" name="phonenumber" placeholder="+7(9_ _)_ _ _-_ _-_ _">
+                </label> <br> <br>
+                <label>
+                    <input class="input-form" type="text" name="message" placeholder="Сообщение">
+                </label> <br> <br>
+            <div class="button-pop-up">
+            <input class="button-style" type="button" name="submit" value="Записаться">
+            </div>
+        </form>
+</div>
 
+<div class="pop-up">
+    <div class="cancel">
+        <img src="Cancel.png">
+    </div>
+    <p class="pop-up-text">
+        Ваша заявка принята! <br> Мы скоро с Вами свяжемся.
+    </p>
+</div>
+
+
+
+</div>
 </body>
 </html>
