Изменила размеры img,сделала hover,active кнопкам, настроила второстепенную страницу для JS

--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -18,7 +18,7 @@
                 <h1 class="text-center text-Nata"> Лесиной Нателы</h1>
                 <p class="text-center text-cosmetology">Косметология и эпиляция</p>
                 <div class="button-center">
-                    <button class="button-style sing-up">
+                    <button class="button-style sing-up z-index first-button">
                         <p>Записаться
                         </p>
                     </button>
@@ -211,10 +211,10 @@
         Отзывы клиентов
     </h2>
     <div class="reviews-text">
-        <div><img class="reviews-sms" src="o1.png"></div>
-        <div><img class="reviews-sms" src="o2.png"></div>
-        <div><img class="reviews-sms" src="o3.png"></div>
-        <div><img class="reviews-sms" src="o4.png"></div>
+        <div><img class="reviews-sms" src="rev13.png"></div>
+        <div><img class="reviews-sms" src="rev7.png"></div>
+        <div><img class="reviews-sms" src="rev8.png"></div>
+        <div><img class="reviews-sms" src="rev4.png"></div>
     </div>
 </div>
 <div class="button-center margin-reviews">
