--- a/Reviews.html
+++ b/Reviews.html
@@ -11,7 +11,7 @@
     <a href="IndexEstetic.html">
         <img class="go-back" src="go-back.png">
     </a>
-    <header> Дипломы и сертификаты </header>
+    <header>Отзывы </header>
     <section>
         <div class="reviews-flex">
             <div>
@@ -23,8 +23,38 @@
             <div>
             <img src="rev3.png">
             </div>
+            <div>
+                <img src="rev4.png">
+            </div>
+            <div>
+                <img src="rev5.png">
+            </div>
+            <div>
+                <img src="rev6.png">
+            </div>
+            <div>
+                <img src="rev7.png">
+            </div>
+            <div>
+                <img src="rev8.png">
+            </div>
+            <div>
+                <img src="rev9.png">
+            </div>
+            <div>
+                <img src="rev10.png">
+            </div>
+            <div>
+                <img src="rev11.png">
+            </div>
+            <div>
+                <img src="rev12.png">
+            </div>
+            <div>
+                <img src="rev13.png">
+            </div>
         </div>
-        <div>
+        <div class="button-next">
             <button class="next-review">
                 <img src="next-certificate.png">
             </button>
