Настроила ссылки на соцсети, настроила ссылки в header

--- a/Сertificates.html
+++ b/Сertificates.html
@@ -12,24 +12,35 @@
         <img class="go-back" src="go-back.png">
     </a>
     <header> Дипломы и сертификаты </header>
+    <div class="flex-center">
     <section>
         <div class="flex-center">
+        <button class="rotate-btn-up">
+            <img src="next-certificate.png">
+        </button>
+        </div>
+        <div class="flex-space-around">
             <img src="cert1.png">
             <img src="cert2.png">
-        </div>
-        <div class="btn-next-certificate">
-            <button class="rotate-btn">
-                <img src="next-certificate.png">
-            </button>
-            <button>
-                <img src="next-certificate.png">
-            </button>
-        </div>
-        <div class="flex-center">
             <img src="cert3.png">
             <img src="cert4.png">
+            <img src="cert5.png">
+            <img src="cert6.png">
+            <img src="cert7.png">
+            <img src="cert8.png">
+            <img src="cert9.png">
+            <img src="cert10.png">
+            <img src="cert11.png">
+            <img src="cert12.png">
         </div>
     </section>
+    </div>
+        <div class="btn-next-certificate-down">
+            <button class="rotate-btn-down">
+                <img src="next-certificate.png">
+            </button>
+        </div>
+
     <footer>
         <div class="button-center">
             <button class="button-style button-style-tablet sing-up">
