--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -18,7 +18,7 @@
                 <h1 class="text-center text-Nata"> Лесиной Нателы</h1>
                 <p class="text-center text-cosmetology">Косметология и эпиляция</p>
                 <div class="button-center">
-                    <button class="button-style sing-up z-index first-button">
+                    <button class="button-style sing-up z-index first-button show-call-me">
                         <p>Записаться
                         </p>
                     </button>
@@ -43,9 +43,9 @@
                     <span class="location">г.Калуга</span>
                 </div>
                 <div class="socials">
-                    <a href=""><div class="vk"></div></a>
-                    <a href=""><div class="whatsapp"></div></a>
-                    <a href=""><div class="insta"></div></a>
+                    <a href="https://vk.com/id51435042"><div class="vk"></div></a>
+                    <a href="https://wa.me/79534676576"><div class="whatsapp"></div></a>
+                    <a href="https://www.instagram.com/natelalesina102/"><div class="insta"></div></a>
                 </div>
             </div>
             <div class="lady-position">
@@ -95,7 +95,7 @@
                     </p>
                 </div>
                 <div class="button-center margin-sing-up-small">
-                    <button class="button-style button-style-tablet sing-up">
+                    <button class="button-style button-style-tablet sing-up show-call-me">
                         <p class="p-tablet">Записаться
                         </p>
                     </button>
@@ -192,7 +192,7 @@
 
 </div>
     <div class="buttons-center margin-sing-up">
-        <button class="button-style">
+        <button class="button-style show-call-me">
             <p>Записаться
             </p>
         </button>
@@ -218,45 +218,52 @@
     </div>
 </div>
 <div class="button-center margin-reviews">
-<button class="button-style"> Смотреть все отзывы</button>
+    <a href="Reviews.html">
+        <button class="button-style"> Смотреть все отзывы</button>
+    </a>
 </div>
 <div class="button-center">
-    <a href=""><div class="vk vk-footer"></div></a>
-    <a href=""><div class="whatsapp whatsapp-footer"></div></a>
-    <a href=""><div class="insta insta-footer"></div></a>
+    <a href="https://vk.com/id51435042"><div class="vk vk-footer"></div></a>
+    <a href="https://wa.me/79534676576"><div class="whatsapp whatsapp-footer"></div></a>
+    <a href="https://www.instagram.com/natelalesina102/"><div class="insta insta-footer"></div></a>
 </div>
 
 <div class="pop-up">
-    <div class="cancel">
-        <img src="Cancel.png">
-    </div>
-        <form>
-                <label>
-                    <input class="input-form" type="text" name="firstname" placeholder="Ваше имя">
-                </label> <br> <br>
-                <label>
-                    <input class="input-form" type="text" name="phonenumber" placeholder="+7(9_ _)_ _ _-_ _-_ _">
-                </label> <br> <br>
-                <label>
-                    <input class="input-form" type="text" name="message" placeholder="Сообщение">
-                </label> <br> <br>
-            <div class="button-pop-up">
-            <input class="button-style" type="button" name="submit" value="Записаться">
+    <div class="form">
+        <div class="pop-up-part1">
+            <div class="cancel">
+                <input type="button" name="submit" value="" class="close-popup">
             </div>
-        </form>
-</div>
-
-<div class="pop-up">
-    <div class="cancel">
-        <img src="Cancel.png">
+            <div>
+                <form>
+                    <label>
+                        <input class="input-form" type="text" name="firstname" placeholder="Ваше имя">
+                    </label> <br> <br>
+                    <label>
+                        <input class="input-form" type="text" name="phonenumber" placeholder="+7(9_ _)_ _ _-_ _-_ _">
+                    </label> <br> <br>
+                    <label>
+                        <input class="input-form" type="text" name="message" placeholder="Сообщение">
+                    </label> <br> <br>
+                    <div class="button-pop-up">
+                        <input class="button-style" type="button" name="submit" value="Записаться">
+                    </div>
+                </form>
+            </div>
+        </div>
+            <div class="pop-up-part2" >
+                <div class="cancel">
+                    <img src="Cancel.png">
+                </div>
+                <p class="pop-up-text">
+                    Ваша заявка принята! <br> Мы скоро с Вами свяжемся.
+                </p>
+            </div>
     </div>
-    <p class="pop-up-text">
-        Ваша заявка принята! <br> Мы скоро с Вами свяжемся.
-    </p>
 </div>
-
 
 
 </div>
 </body>
+<script src="Main.js" type="text/javascript"></script>
 </html>
