Перенесла все картинки в отдельную папку и изменила пути к ним, перенесла кнопку в попапе cancel

--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -39,7 +39,7 @@
             <div class="all-contacts">
                 <p class="contacts">+7(953)467-65-76</p>
                 <div>
-                    <span><img class="icon-location" src="Location.png"></span>
+                    <span><img class="icon-location" src="pictures/Location.png"></span>
                     <span class="location">г.Калуга</span>
                 </div>
                 <div class="socials">
@@ -49,8 +49,8 @@
                 </div>
             </div>
             <div class="lady-position">
-                <img class="photo-lady" src="Lady.png">
-                <img class="photo-lady-tablet" src="Tablet-lady.png">
+                <img class="photo-lady" src="pictures/Lady.png">
+                <img class="photo-lady-tablet" src="pictures/Tablet-lady.png">
             </div>
         </div>
     </div>
@@ -109,31 +109,31 @@
     <div class="flex-container part-2">
         <div class="white-rectangle">
             <div>
-                <img class="margin-advantages" src="Advantage-1.png">
+                <img class="margin-advantages" src="pictures/Advantage-1.png">
                 <p class="margin-p">Серцифицированный специалист</p>
             </div>
         </div>
         <div class="invisible-rectangle w-320 i-734 i-964">
             <div>
-                <img class="margin-advantages padding-advantages" src="Advantage-2.png">
+                <img class="margin-advantages padding-advantages" src="pictures/Advantage-2.png">
                 <p class="margin-p">Профессиональная косметика</p>
             </div>
         </div>
         <div class="white-rectangle w-980 i-max i-750">
             <div>
-                <img class="margin-advantages" src="Advantage-3.png">
+                <img class="margin-advantages" src="pictures/Advantage-3.png">
                 <p class="margin-p">Многолетний опыт работы с клиентами</p>
             </div>
         </div>
         <div class="invisible-rectangle w-964 w-734 w-320">
             <div>
-                <img class="margin-advantages padding-advantages" src="Advantage-4.png">
+                <img class="margin-advantages padding-advantages" src="pictures/Advantage-4.png">
                 <p class="margin-p">Удобное расположение в центре города</p>
             </div>
         </div>
         <div class="white-rectangle">
             <div>
-                <img class="margin-advantages" src="Advantage-5.png">
+                <img class="margin-advantages" src="pictures/Advantage-5.png">
                 <p class="margin-p">Всегда уютная атмофера</p>
             </div>
         </div>
@@ -142,7 +142,7 @@
 
 <div class="container">
     <div>
-        <img class="Photo-1" src="Photo-1.png">
+        <img class="Photo-1" src="pictures/Photo-1.png">
     </div>
     <div class="Orange">
         <div class="paddind-div">
@@ -211,10 +211,10 @@
         Отзывы клиентов
     </h2>
     <div class="reviews-text">
-        <div><img class="reviews-sms" src="rev13.png"></div>
-        <div><img class="reviews-sms" src="rev7.png"></div>
-        <div><img class="reviews-sms" src="rev8.png"></div>
-        <div><img class="reviews-sms" src="rev4.png"></div>
+        <div><img class="reviews-sms" src="pictures/rev13.png"></div>
+        <div><img class="reviews-sms" src="pictures/rev7.png"></div>
+        <div><img class="reviews-sms" src="pictures/rev8.png"></div>
+        <div><img class="reviews-sms" src="pictures/rev4.png"></div>
     </div>
 </div>
 <div class="button-center margin-reviews">
@@ -230,10 +230,11 @@
 
 <div class="pop-up">
     <div class="form">
+        <div class="cancel">
+        <input type="button" name="submit" value="" class="close-popup">
+    </div>
         <div class="pop-up-part1">
-            <div class="cancel">
-                <input type="button" name="submit" value="" class="close-popup">
-            </div>
+
             <div>
                 <form>
                     <label>
@@ -252,9 +253,6 @@
             </div>
         </div>
             <div class="pop-up-part2" >
-                <div class="cancel">
-                    <img src="Cancel.png">
-                </div>
                 <p class="pop-up-text">
                     Ваша заявка принята! <br> Мы скоро с Вами свяжемся.
                 </p>
