--- a/Reviews.html
+++ b/Reviews.html
@@ -9,54 +9,54 @@
 <body>
 <div>
     <a href="IndexEstetic.html">
-        <img class="go-back" src="go-back.png">
+        <img class="go-back" src="pictures/go-back.png">
     </a>
     <header>Отзывы </header>
     <section>
         <div class="reviews-flex">
             <div>
-            <img src="rev1.png">
+            <img src="pictures/rev1.png">
             </div>
             <div>
-            <img src="rev2.png">
+            <img src="pictures/rev2.png">
             </div>
             <div>
-            <img src="rev3.png">
+            <img src="pictures/rev3.png">
             </div>
             <div>
-                <img src="rev4.png">
+                <img src="pictures/rev4.png">
             </div>
             <div>
-                <img src="rev5.png">
+                <img src="pictures/rev5.png">
             </div>
             <div>
-                <img src="rev6.png">
+                <img src="pictures/rev6.png">
             </div>
             <div>
-                <img src="rev7.png">
+                <img src="pictures/rev7.png">
             </div>
             <div>
-                <img src="rev8.png">
+                <img src="pictures/rev8.png">
             </div>
             <div>
-                <img src="rev9.png">
+                <img src="pictures/rev9.png">
             </div>
             <div>
-                <img src="rev10.png">
+                <img src="pictures/rev10.png">
             </div>
             <div>
-                <img src="rev11.png">
+                <img src="pictures/rev11.png">
             </div>
             <div>
-                <img src="rev12.png">
+                <img src="pictures/rev12.png">
             </div>
             <div>
-                <img src="rev13.png">
+                <img src="pictures/rev13.png">
             </div>
         </div>
         <div class="button-next">
             <button class="next-review">
-                <img src="next-certificate.png">
+                <img src="pictures/next-certificate.png">
             </button>
         </div>
     </section>
