--- a/Сertificates.html
+++ b/Сertificates.html
@@ -9,35 +9,35 @@
 <body>
 <div>
     <a href="IndexEstetic.html">
-        <img class="go-back" src="go-back.png">
+        <img class="go-back" src="pictures/go-back.png">
     </a>
     <header> Дипломы и сертификаты </header>
     <div class="flex-center">
     <section>
         <div class="flex-center">
         <button class="rotate-btn-up">
-            <img src="next-certificate.png">
+            <img src="pictures/next-certificate.png">
         </button>
         </div>
         <div class="flex-space-around">
-            <img src="cert1.png">
-            <img src="cert2.png">
-            <img src="cert3.png">
-            <img src="cert4.png">
-            <img src="cert5.png">
-            <img src="cert6.png">
-            <img src="cert7.png">
-            <img src="cert8.png">
-            <img src="cert9.png">
-            <img src="cert10.png">
-            <img src="cert11.png">
-            <img src="cert12.png">
+            <img src="pictures/cert1.png">
+            <img src="pictures/cert2.png">
+            <img src="pictures/cert3.png">
+            <img src="pictures/cert4.png">
+            <img src="pictures/cert5.png">
+            <img src="pictures/cert6.png">
+            <img src="pictures/cert7.png">
+            <img src="pictures/cert8.png">
+            <img src="pictures/cert9.png">
+            <img src="pictures/cert10.png">
+            <img src="pictures/cert11.png">
+            <img src="pictures/cert12.png">
         </div>
     </section>
     </div>
         <div class="btn-next-certificate-down">
             <button class="rotate-btn-down">
-                <img src="next-certificate.png">
+                <img src="pictures/next-certificate.png">
             </button>
         </div>
 
