Сделала бургер-меню во всех разрешениях, настроили JS на странице с сертификатами с помощью БА.

--- a/Certificates.html
+++ b/Certificates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="Сertificates-styles.css" type="text/css"/>
+    <link rel="stylesheet" href="Certificates-styles.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Gabriela&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Сertificates</title>
@@ -15,9 +15,9 @@
     <div class="flex-center">
     <section>
         <div class="flex-center">
-        <button class="rotate-btn-up">
-            <img src="pictures/next-certificate.png">
-        </button>
+            <button class="rotate-btn-up">
+                <img src="pictures/next-certificate.png">
+            </button>
         </div>
         <div class="flex-space-around">
             <img src="pictures/cert1.png">
@@ -51,4 +51,5 @@
     </footer>
 </div>
 </body>
+<script src="Certificates.js" type="text/javascript"></script>
 </html>
