--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -28,7 +28,7 @@
                 <div>
                     <a class="link text-decoration-none" href="Services.html"> Услуги и цены
                     </a>
-                    <a class="link text-decoration-none" href="Сertificates.html"> Дипломы и сертификаты
+                    <a class="link text-decoration-none" href="Certificates.html"> Дипломы и сертификаты
                     </a>
                     <a class="text-decoration-none" href="Reviews.html"> Отзывы
                     </a>
@@ -61,6 +61,21 @@
     <div class="white-header">
         <div class="mobile-menu">
             <button class="burger">
+                <div class="burger-menu">
+                    <div class="part-of-menu">
+                        <a class="burger-links text-decoration-none" href="Services.html"> Услуги и цены</a>
+                    </div>
+                    <div class="black-line">
+                    </div>
+                    <div class="part-of-menu">
+                        <a class="burger-links text-decoration-none line-height" href="Certificates.html"> Дипломы и сертификаты</a>
+                    </div>
+                    <div class="black-line">
+                    </div>
+                    <div class="part-of-menu">
+                        <a class="burger-links text-decoration-none" href="Reviews.html"> Отзывы</a>
+                    </div>
+                </div>
             </button>
             <p class="mobile-number">+7(953)467-65-76
             </p>
@@ -247,12 +262,12 @@
                         <input class="input-form" type="text" name="message" placeholder="Сообщение">
                     </label> <br> <br>
                     <div class="button-pop-up">
-                        <input class="button-style" type="button" name="submit" value="Записаться">
+                        <input class="button-style" id="confirm-call-me" type="button" name="submit" value="Записаться">
                     </div>
                 </form>
             </div>
         </div>
-            <div class="pop-up-part2" >
+            <div class="pop-up-part2 pop-up-none">
                 <p class="pop-up-text">
                     Ваша заявка принята! <br> Мы скоро с Вами свяжемся.
                 </p>
