--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
 <body>
 <div>
     <a href="IndexEstetic.html">
-        <img class="go-back" src="go-back.png">
+        <img class="go-back" src="pictures/go-back.png">
     </a>
     <header> Услуги и цены </header>
 </div>
