Начала делать Js для страницы 'Отзывы', исправила расположение блоков в мобильной версии, настроили попапы на всех страницах, поправила размеры текстов

--- a/IndexEstetic.html
+++ b/IndexEstetic.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="estetic-styles.css" type="text/css"/>
+    <link rel="stylesheet" href="general.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Gabriela&display=swap" rel="stylesheet">
+    <link rel="preload" href="fonts/MPLUSRounded1c-Regular.ttf" as="font" type="font/ttf">
+    <link rel="preload" href="fonts/MPLUSRounded1c-Bold.ttf" as="font" type="font/ttf">
     <meta charset="UTF-8">
     <title>Estetic</title>
 </head>
@@ -61,7 +64,7 @@
     <div class="white-header">
         <div class="mobile-menu">
             <button class="burger">
-                <div class="burger-menu">
+                <div class="burger-menu close-burger-menu">
                     <div class="part-of-menu">
                         <a class="burger-links text-decoration-none" href="Services.html"> Услуги и цены</a>
                     </div>
@@ -99,7 +102,7 @@
                     <p class="text-center text-estetic text-estetic-tablet text-estetic-mobile">Эстетик Студия
                     </p>
                 </div>
-                <div>
+                <div class="mobile-div-mgn">
                     <h1 class="text-center text-Nata text-Nata-tablet text-Nata-mobile"> Лесиной Нателы
                     </h1>
                 </div>
@@ -279,4 +282,5 @@
 </div>
 </body>
 <script src="Main.js" type="text/javascript"></script>
+<script src="general.js" type="text/javascript"></script>
 </html>
