--- a/services.html
+++ b/services.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="Services-styles.css" type="text/css"/>
+    <link rel="stylesheet" href="general.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Gabriela&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Services</title>
@@ -79,13 +80,43 @@
 </div>
 </section>
 <footer>
-    <div class="button-center">
-        <button class="button-style button-style-tablet sing-up">
+    <div class="button-center margin-sing-up-small">
+        <button class="button-style button-style-tablet sing-up show-call-me">
             <p class="p-tablet">Записаться
             </p>
         </button>
     </div>
 </footer>
-
+<div class="pop-up">
+    <div class="form">
+        <div class="cancel">
+            <input type="button" name="submit" value="" class="close-popup">
+        </div>
+        <div class="pop-up-part1">
+            <div>
+                <form>
+                    <label>
+                        <input class="input-form" type="text" name="firstname" placeholder="Ваше имя">
+                    </label> <br> <br>
+                    <label>
+                        <input class="input-form" type="text" name="phonenumber" placeholder="+7(9_ _)_ _ _-_ _-_ _">
+                    </label> <br> <br>
+                    <label>
+                        <input class="input-form" type="text" name="message" placeholder="Сообщение">
+                    </label> <br> <br>
+                    <div class="button-pop-up">
+                        <input class="button-style" id="confirm-call-me" type="button" name="submit" value="Записаться">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="pop-up-part2 pop-up-none">
+            <p class="pop-up-text">
+                Ваша заявка принята! <br> Мы скоро с Вами свяжемся.
+            </p>
+        </div>
+    </div>
+</div>
 </body>
+<script src="general.js" type="text/javascript"></script>
 </html>
