rename to index.html

--- a/Reviews.html
+++ b/Reviews.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div>
-    <a href="IndexEstetic.html">
+    <a href="index.html">
         <img class="go-back" src="pictures/go-back.png">
     </a>
     <header>Отзывы </header>
