--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link href="https://fonts.googleapis.com/css?family=Gabriela&display=swap" rel="stylesheet">
     <link rel="preload" href="fonts/MPLUSRounded1c-Regular.ttf" as="font" type="font/ttf">
     <link rel="preload" href="fonts/MPLUSRounded1c-Bold.ttf" as="font" type="font/ttf">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="description" content="Эстетик студия Лесиной Нателы оказывает услуги в области косметологии и эпиляции.
+Специалисты с высшим медецинским образованием подберет необходимые процедуры для Вашего типа кожи,
+а также поможет быстро и качественно избавиться от нежелательных волос на теле.">
+
+    <meta property="og:url" content="https://cosmetology40.ru">
+    <meta property="og:title" content="Косметология и эпиляция">
+    <meta property="og:description" content="Эстетик студия Лесиной Нателы">
+
     <meta charset="UTF-8">
     <title>Estetic</title>
 </head>
