Services upper case

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </button>
     </div>
     <div class="buttons-center go-to-price">
-        <a href="services.html">
+        <a href="Services.html">
             <button class="button-style">
             <p>Перейти в прайс лист
             </p>
