--- a/Certificates.html
+++ b/Certificates.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="Certificates-styles.css" type="text/css"/>
     <link rel="stylesheet" href="general.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Gabriela&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="description" content="Эстетик студия Лесиной Нателы оказывает услуги в области косметологии и эпиляции.
+Специалист с высшим медецинским образованием подберет необходимые процедуры для Вашего типа кожи,
+а также поможет быстро и качественно избавиться от нежелательных волос на теле. Повышение квалификации, обучения позволяют
+быть в курсе последних тенденций в области косметологии.">
+
+    <meta property="og:url" content="https://cosmetology40.ru">
+    <meta property="og:title" content="Дипломы с сертификаты">
+    <meta property="og:description" content="Дипломы специалиста">
+
     <meta charset="UTF-8">
     <title>Сertificates</title>
 </head>
@@ -14,7 +25,7 @@
     <a href="index.html">
         <img class="go-back" src="pictures/go-back.png">
     </a>
-    <header> Дипломы и сертификаты </header>
+    <header> Дипломы и <br> сертификаты </header>
     <div class="flex-center">
     <section>
         <div class="flex-center">
