--- a/Reviews.html
+++ b/Reviews.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="Reviews-styles.css" type="text/css"/>
     <link rel="stylesheet" href="general.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Gabriela&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="description" content="Реальные отзывы от клиентов, побывавших в студии Лесиной Нателы
+    (эпляция, очищение кожи, уходовые программы, оформление бровей).">
+
+    <meta property="og:url" content="https://cosmetology40.ru">
+    <meta property="og:title" content="Отзывы от клиентов">
+    <meta property="og:description" content="Отзывы о студии Лесиной Нателы">
+
     <meta charset="UTF-8">
     <title>Reviews</title>
 </head>
