--- a/services.html
+++ b/services.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="Services-styles.css" type="text/css"/>
     <link rel="stylesheet" href="general.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Gabriela&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="description" content="Перечень процедур, проводимых в студии Лесиной Нателы (Очищение кожи,
+    уходовые программы, оформление бровей, эпиляция).
+Специалисты с высшим медецинским образованием подберет необходимые процедуры для Вашего типа кожи,
+а также поможет быстро и качественно избавиться от нежелательных волос на теле.">
+
+    <meta property="og:url" content="https://cosmetology40.ru">
+    <meta property="og:title" content="Перечень услуг">
+    <meta property="og:description" content="Услуги в студии Лесиной Нателы">
+
     <meta charset="UTF-8">
     <title>Services</title>
 </head>
