--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
 
     <meta charset="UTF-8">
     <title>Estetic</title>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(64766413, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/64766413" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
 </head>
 
 
@@ -94,13 +108,13 @@
             <p class="mobile-number">+7(953)467-65-76
             </p>
             <div class="socials-mobile">
-                <a href="">
+                <a href="https://vk.com/id51435042">
                     <div class="vk"></div>
                 </a>
-                <a href="">
+                <a href="https://wa.me/79534676576">
                     <div class="whatsapp"></div>
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/natelalesina102/">
                     <div class="insta"></div>
                 </a>
             </div>
